feat: add flag crud CLI commands
